fix: z-index on mobile menu (#427)
* fix: z-index on mobile menu

* fix: z-index on mobile menu

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -288,6 +288,7 @@
     overflow-y: overlay;
     overflow-x: hidden;
     max-height: 395px;
+    z-index: 9999;
   }
 
   .dcl.navbar .mobile-menu .item {
